express js basics done. assignment pending

--- a/2 - Express Js/views/404-not-found.html
+++ b/2 - Express Js/views/404-not-found.html
@@ -7,7 +7,7 @@
   <title>Add Product</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -24,18 +24,12 @@
       </ul>
     </header>
 
-    <main>
-      <form method="POST" action="/admin/add-product">
-        <div class="mb-3">
-          <label for="productName" class="form-label">Product Name</label>
-          <input type="text" class="form-control" id="productName" name="productName" placeholder="Enter product name">
-        </div>
 
-        <button type="submit" class="btn">Submit</button>
-      </form>
+    <main>
+      <h1>404 Not Found</h1>
+
     </main>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
